--- a/website/newsletter/219/index.mdx
+++ b/website/newsletter/219/index.mdx
@@ -114,6 +114,7 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 - 📦 [React Native 0.74.7](https://github.com/facebook/react-native/releases/tag/v0.74.7): End-of-life release, 0.74.x is now out of support.
 - 📦 [React Native CSS Animation presets for Reanimated 4](https://github.com/software-mansion-labs/react-native-css-animations)
 - 🎥 [Fernando Rojo \- I built a React Native bottom sheet...with SwiftUI?](https://www.youtube.com/watch?v=TFEPTgGJ2iU)
+- 🎥 [Jack Herrington \- Micro-Frontends in React-Native\! Game Changer for Mobile Apps](https://www.youtube.com/watch?v=Lp-5wSsd5Do)
 - 🎥 [Simon Grimm \- React Native Animations just got way easier (Reanimated v4)](https://www.youtube.com/watch?v=QgCLSR9EbDc)
 - 🎙️ [React Universe On Air 47 \- Mobile Microfrontends With Zephyr Cloud and Re.Pack](https://www.youtube.com/watch?v=9fHpEngW2lU)
 - 🎙️ [RNR 319 \- Shopify goes full throttle on React Native with Mustafa Ali](https://www.reactnativeradio.com/episodes/rnr-319-shopify-goes-full-throttle-on-react-native-with-mustafa-ali)
