--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -26,20 +26,15 @@ import Support from "../_support.mdx";
 
 **[PropelAuth: Make Authentication Your Advantage](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrfeb052024)**
 
-If your authentication isn't **helping you grow**, it's **holding you back**.  
-  
+If your authentication isn't **helping you grow**, it's **holding you back**.
+
 With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024), you get everything you need to launch and scale your B2B product:
 
-*   **Easy to understand** [documentation](https://docs.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024) and **friendly, fast support**.
-    
-*   **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
-    
-*   **User impersonation** so you can provide top-notch support to your users.
-    
-*   **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
-    
-*   **User insights** to help you strategize and expand.
-    
+- **Easy to understand** [documentation](https://docs.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024) and **friendly, fast support**.
+- **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
+- **User impersonation** so you can provide top-notch support to your users.
+- **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
+- **User insights** to help you strategize and expand.
 
 [Get started today](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan222024)
 
@@ -47,9 +42,29 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 
 ## ⚛️ React {#react}
 
-<Todo />
-
-- 💸 [Convex: The Reactive Database for Web Developers](https://convex.link/thisweek)
+- 💸 [Add a collaborative document editor to your app](https://convex.link/0dtC5qE)
+- 👀 [Next.js PR \- Support for Node.js middleware](https://github.com/vercel/next.js/pull/75624): The latest v15.2 canary has a new `experimental.nodeMiddleware` flag letting you opt-in for `runtime: ‘nodejs’`, enabling you to use Node.js APIs in middleware. Vercel middleware has also been rebuilt to support multiple runtimes and run on [Fluid compute](https://vercel.com/blog/introducing-fluid-compute), a new cost-efficient way to run serverless functions.
+- 👀 [Remix PR \- Split Route Modules](https://github.com/remix-run/react-router/pull/11871): Introduce new `future.unstable_splitRouteModules` flag so that the route component and its clientLoader can be downloaded in parallel instead of sequentially.
+- 📖 [Integrate Motion with Radix](https://motion.dev/docs/radix): New docs page presenting integration examples for exit and layout animations.
+- 📜 [Single Responsibility Principle in React: The Art of Component Focus](https://cekrem.github.io/posts/single-responsibility-principle-in-react/): I agree with this practice of designing your React app in “layers”.
+- 📜 [Persisting Form Data in React: A Modern Approach with Nuqs](https://armand-salle.fr/post/persisting-form-data-in-react-a-modern-approach-with-nuqs/): Introduces a convenient lib to use search parameters in a typesafe way with integrations for Next.js and React Router.
+- 📜 [Using Phoenix with React and Inertia](https://dnlytras.com/blog/phoenix-react-inertia): Explains the surprising technical choice of combining an Elixir/Phoenix backend with a React SPA, including the challenges encountered and caveats. The Inertia protocol permits stitching both technologies through an adapter.
+- 📜 [An ast-grep rule to ban bad HTML nesting in React](https://macwright.com/2025/01/30/ast-grep-to-ban-bad-nesting): A possible alternative to ESLint rule.
+- 📜 [How to Load Dynamic Stylesheets in React Router](https://sergiodxa.com/tutorials/load-dynamic-stylesheets-in-react-router): Presenting techniques to load custom styles per authenticated user/company, using resource routes and meta functions.
+- 📜 [The React data-table I always wanted](https://www.openstatus.dev/blog/data-table-redesign): A full-featured demo of TanStack Table \+ shadcn/ui \+ Nuqs, documenting lessons learned. A good inspiration to build your own table.
+- 📜 [How to inspect React Server Component Activity with Next.js](https://www.dash0.com/blog/how-to-inspect-react-server-component-activity-with-next-js): Using Next.js `instrumentation.js` and OpenTelemetry.
+- 📜 [How to build a library in React](https://tigerabrodi.blog/how-to-build-a-library-in-react): Implementing and publishing a `useContextSelector` hook
+- 📦 [Astro 5.2 \- Tailwind 4 support, trailing slash redirects, option to disable React streaming](https://astro.build/blog/astro-520/): Streaming might be incompatible with runtime CSS-in-JS libraries.
+- 📦 [mdx-prompt \- Composable LLM Prompts with JSX](https://edspencer.net/2025/2/3/mdx-prompt-composable-prompts-with-jsx)
+- 📦 [React Scan 0.1.2 \- Re-render history, components tree](https://github.com/aidenybai/react-scan/releases/tag/v0.1.2)
+- 📦 [Fumadocs 15.0 \- Tailwind 4 support](https://fumadocs.vercel.app/blog/v15)
+- 📦 [Redwood 8.5](https://github.com/redwoodjs/redwood/releases/tag/v8.5.0)
+- 📦 [React Three XR 6.6 \- IWER debugging tools for mixed reality apps](https://github.com/pmndrs/xr/releases/tag/v6.6.0)
+- 📦 [MUI 7.0 alpha](https://github.com/mui/material-ui/releases/tag/v7.0.0-alpha.0)
+- 🎥 [Aaron Francis \- Introducing Fusion \- Seamlessly combine React and Vue with Laravel](https://www.youtube.com/watch?v=sa3XHjG1Kgs)
+- 🎥 [Theo \- Create React App is finally dead](https://www.youtube.com/watch?v=aujVi7ipkfM)
+- 🎥 [Jack Herrington \- Stop Using Recoil, Use This Instead\!](https://www.youtube.com/watch?v=QepeuHTxiLo)
+- 🎙️ [This Month in React 2025-01 \- Movement on CRA, Redwood.js dead?](https://open.spotify.com/episode/45LTSjvCA5k5YAC7EM4ixk)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -63,12 +78,11 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 
 Bad performance is just another kind of bug 🐛 . And Sentry helps you find bugs fast, even the ones that aren’t obvious.
 
-*   Cut chunks of time off of bad API calls
-    
-*   Reduce extremely costly, frequently pinged, or generally slow db operations 
-    
-*   Uncover the source of a traffic spike spike in minutes
-    
+- Cut chunks of time off of bad API calls
+
+- Reduce extremely costly, frequently pinged, or generally slow db operations
+
+- Uncover the source of a traffic spike spike in minutes
 
 Whether it’s an error or a slowdown, Sentry helps you fix issues fast and keep your app running smoothly. Because if it’s slow, it’s broken. [See for yourself](https://sentry.io/lp/new-apm/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=perf-fy26q1-evergreen&utm_content=newsletter-primary-slowbug-seehow).
 
