--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -72,19 +72,11 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 
 ## 💸 Sponsor {#sponsor2}
 
-[![If It’s Slow, It’s Broken 🐢](/emails/issues/217/sentry.jpg)](https://sentry.io/lp/new-apm/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=perf-fy26q1-evergreen&utm_content=newsletter-primary-slowbug-seehow)
+[![See what’s broken and where with Sentry](/emails/issues/220/sentry.jpg)](https://sentry.io/resources/find-fix-test/?utm_source=bytes&utm_medium=paid-community&utm_campaign=general-fy25q4-evergreen&utm_content=newsletter-biweeklydemo-register)
 
-**[If It’s Slow, It’s Broken 🐢](https://sentry.io/lp/new-apm/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=perf-fy26q1-evergreen&utm_content=newsletter-primary-slowbug-seehow)**
+**[See what’s broken and where with Sentry](https://sentry.io/resources/find-fix-test/?utm_source=bytes&utm_medium=paid-community&utm_campaign=general-fy25q4-evergreen&utm_content=newsletter-biweeklydemo-register)**
 
-Bad performance is just another kind of bug 🐛 . And Sentry helps you find bugs fast, even the ones that aren’t obvious.
-
-- Cut chunks of time off of bad API calls
-
-- Reduce extremely costly, frequently pinged, or generally slow db operations
-
-- Uncover the source of a traffic spike spike in minutes
-
-Whether it’s an error or a slowdown, Sentry helps you fix issues fast and keep your app running smoothly. Because if it’s slow, it’s broken. [See for yourself](https://sentry.io/lp/new-apm/?utm_source=thisweekinreact&utm_medium=paid-community&utm_campaign=perf-fy26q1-evergreen&utm_content=newsletter-primary-slowbug-seehow).
+Sentry's new bi-weekly live demos will show you how to catch, fix and prevent issues fast. Join one of their engineers Thursdays at 1 PM ET for 25 minute tour—no slides, no fluff, just code-level visibility from pre-release to production. [RSVP](https://sentry.io/resources/find-fix-test/?utm_source=bytes&utm_medium=paid-community&utm_campaign=general-fy25q4-evergreen&utm_content=newsletter-biweeklydemo-register)
 
 ---
 
