--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -8,9 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+UPDATE SENTRY !!!
 
-🗓️ [Paris TypeScript La Conf'](https://la-conf.typescript.paris/?utm_source=thisweekinreact) - 🇫🇷 Paris - 28 February - Full Last call to join the first ever TypeScript conference in the heart of Paris! Get 20% off tickets with code "TWIR"!
+<Todo />
 
 <!-- truncate -->
 
@@ -45,6 +45,7 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 - 💸 [Add a collaborative document editor to your app](https://convex.link/0dtC5qE)
 - 👀 [Next.js PR \- Support for Node.js middleware](https://github.com/vercel/next.js/pull/75624): The latest v15.2 canary has a new `experimental.nodeMiddleware` flag letting you opt-in for `runtime: ‘nodejs’`, enabling you to use Node.js APIs in middleware. Vercel middleware has also been rebuilt to support multiple runtimes and run on [Fluid compute](https://vercel.com/blog/introducing-fluid-compute), a new cost-efficient way to run serverless functions.
 - 👀 [Remix PR \- Split Route Modules](https://github.com/remix-run/react-router/pull/11871): Introduce new `future.unstable_splitRouteModules` flag so that the route component and its clientLoader can be downloaded in parallel instead of sequentially.
+- 🗓️ [Paris TypeScript La Conf'](https://la-conf.typescript.paris/?utm_source=thisweekinreact) - 🇫🇷 Paris - 28 February - Last call to join the first ever TypeScript conference in the heart of Paris! Get 20% off tickets with code "TWIR"!
 - 📖 [Integrate Motion with Radix](https://motion.dev/docs/radix): New docs page presenting integration examples for exit and layout animations.
 - 📜 [Single Responsibility Principle in React: The Art of Component Focus](https://cekrem.github.io/posts/single-responsibility-principle-in-react/): I agree with this practice of designing your React app in “layers”.
 - 📜 [Persisting Form Data in React: A Modern Approach with Nuqs](https://armand-salle.fr/post/persisting-form-data-in-react-a-modern-approach-with-nuqs/): Introduces a convenient lib to use search parameters in a typesafe way with integrations for Next.js and React Router.
