--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -13,6 +13,8 @@ Mobile developers will also discover future plans for React Native, including fo
 
 TypeScript continues to progress with a new beta including a flag to support the newly added native Node.js support, and the upcoming browser support. A polyfill for native browsers support is already available!
 
+I'm trying something new this week, splitting the newsletter title keywords with a `|`, following the pattern `React keywords | React Native keywords | Other keywords`. Do you think this is useful?
+
 <!-- truncate -->
 
 import Support from "../_support.mdx";
