--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -51,7 +51,7 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 
 A much-awaited feature for the Next.js community. The latest v15.2 canary has a new `experimental.nodeMiddleware` flag letting you opt-in for `runtime: ‘nodejs’`, enabling you to use Node.js APIs in middleware, and remove the constraints of being limited to APIs compatible with the edge runtime.
 
-Vercel middleware has also been [rebuilt from the ground up](4706) to support multiple runtimes and run on [Fluid compute](https://vercel.com/blog/introducing-fluid-compute), a new cost-efficient way for Vercel to run serverless functions.
+Vercel middleware has also been [rebuilt from the ground up](https://x.com/galstar/status/1886832573482934706) to support multiple runtimes and run on [Fluid compute](https://vercel.com/blog/introducing-fluid-compute), a new cost-efficient way for Vercel to run serverless functions.
 
 ---
 
