--- a/website/newsletter/220/index.mdx
+++ b/website/newsletter/220/index.mdx
@@ -11,7 +11,7 @@ This week we have a good variety of React articles and Next.js is finally adding
 
 Mobile developers will also discover future plans for React Native, including for desktop support from Microsoft. A new sortables drag & drop library should unlock new interactions in your app, considering it's quite hard to build all this yourself.
 
-TypeScript continues to progress with a new beta including a flag to support the newly added native Node.js support, and the upcoming browser support. A polyfill for native browsers support is already available!
+TypeScript continues to progress with a new beta including a flag to support the newly added native Node.js support, and the upcoming browser support. A polyfill for native browser support is already available!
 
 I'm trying something new this week, splitting the newsletter title keywords with a `|`, following the pattern `React keywords | React Native keywords | Other keywords`. Do you think this is useful?
 
